# rust-web-server

./: 404.html  Cargo.toml  hello.html
public/: style.css
src/: lib.rs  main.rs  routes.rs  state.rs
