[package]
name = "hello"
version = "0.1.0"
authors = ["Jim Hessin <jhessin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
gotham = "0.6.0"
gotham_derive = "0.6.0"
mime = "0.3.16"
nix = "0.21.0"
rust-tags = "0.3.1"
tokio = { version = "1.6.1", features = ["full"] }
